fix: manage club page element overflow is fixed

--- a/src/containers/manage-club/style.module.scss
+++ b/src/containers/manage-club/style.module.scss
@@ -18,7 +18,7 @@
 .items {
   margin: 20px 10px;
   overflow: scroll;
-  max-height: 90%;
+  max-height: 400px;
   .item {
     display: flex;
     flex-direction: row;
@@ -37,6 +37,8 @@
 }
 
 #share-power {
+  max-height: 550px;
+  overflow: scroll;
   .item {
     display: flex;
     margin: 20px 0;
