--- a/src/containers/manage-organization/style.module.scss
+++ b/src/containers/manage-organization/style.module.scss
@@ -18,7 +18,7 @@
 .items {
   margin: 20px 10px;
   overflow: scroll;
-  max-height: 90%;
+  max-height: 400px;
   .item {
     display: flex;
     flex-direction: row;
